# IntelRealsense-D457-Capstone

./: README.md  colourdepth  colourdepth.cpp  pointcloud  pointcloud.cpp  pointcloudsomewhere  realsense_app.cpp  realsense_pi  realsense_pi.cpp  workingpointcloud
FinalPCD/: pointcloud.cpp
RealSenseClient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
build-RealSenseClient-Desktop-Debug/: CMakeCache.txt  Makefile  RealSenseClient  RealSenseClient.cbp  cmake_install.cmake
build-RealSenseClient-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-5dd4d6b5a9b0ac941bb4.json  cmakeFiles-v1-576c7be26c318a6b212c.json  codemodel-v2-9c59a2a6eabc6b775514.json  index-2024-02-28T11-53-14-0018.json  target-RealSenseClient-Debug-98661816c21bfa5e4360.json  target-RealSenseClient_autogen-Debug-92ff536be05c81479712.json
build-RealSenseClient-Desktop-Debug/RealSenseClient_autogen/: moc_predefs.h
build-RealSenseClient-Desktop-Debug/RealSenseClient_autogen/EWIEGA46WW/: moc_mainwindow.cpp
